[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "annotsv"
description = "Annotation and Ranking of Structural Variation "
authors = [
    {name = "Geoffroy Véronique ", email = "veronique.geoffroy@inserm.fr"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer>=0.6.1",
]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha"
]

[project.urls]
Repository = "https://github.com/lgmgeo/AnnotSV"
Homepage = "https://lbgi.fr/AnnotSV/"

[project.scripts]
AnnotSV = "annotsv.__main__:main"

[project.optional-dependencies]
[tool.pdm]
version = {use_scm = true}
package-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.1",
]
dev = [
    "parver>=0.3",
    "nox>=2022.8.7",
]

doc = [
    "mkdocs>=1.1",
    "mkdocs-material>=6.2",
]

[tool.pdm.scripts]
test = "pytest tests/"
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
AnnotSv = "pdm run python -m annotsv"

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = ["annotsv"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
python_version = "3.10"
show_error_codes = true
warn_unused_ignores = true
exclude = [
  '\.eggs$',
  '\.git$',
  '\.mypy_cache$',
  '\.tox$',
  '\.venv$',
  '_build$',
  'buck-out$',
  'build$',
  'dist$',
  'tests/fixtures$',
  '^noxfile\.py$',
  '^tasks/'
]
