[metadata]
name = variantconvert
version = attr: variantconvert.__version__
description = Script to convert genetic variants between various file formats
long_description = file: README.md
long_description_content_type = text/markdown
author = Samuel Nicaise
url = https://github.com/SamuelNicaise/variantconvert

license_files = LICENSE
keywords = bioinformatics, VCF, converter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3

[options.package_data]
* = *.yaml, *.json


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    pandas
    pyfaidx
    natsort
    tqdm
    polars
    appdirs

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    pytest

[options.entry_points]
console_scripts =
    variantconvert = variantconvert.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = variantconvert/__init__.py
